WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294952
[visionOS] Gaze glow shape is incorrect for elements with associated label and non-uniform border radii or clip path
https://bugs.webkit.org/show_bug.cgi?id=294952
Summary
[visionOS] Gaze glow shape is incorrect for elements with associated label an...
Lily Spiniolas
Reported
2025-06-24 21:25:41 PDT
rdar://154258426
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-06-24 23:11:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47168
EWS
Comment 2
2025-06-25 19:19:08 PDT
Committed
296646@main
(b1e40d13effb): <
https://commits.webkit.org/296646@main
> Reviewed commits have been landed. Closing PR #47168 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug